# libdogleg

./: .gitignore  CMakeLists.txt  README.md  dogleg.cpp  dogleg.h
